--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 tensorflow = "^2.18.0"
 opencv-python = "^4.10.0.84"
 pandas = "^2.2.3"
+scikit-learn = "^1.6.0"
 
 
 [build-system]
