--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,10 @@ opencv-python = "^4.10.0.84"
 pandas = "^2.2.3"
 scikit-learn = "^1.6.1"
 pre-commit = "^4.0.1"
+notebook = "^7.3.2"
+ipykernel = "^6.29.5"
+matplotlib = "^3.10.0"
+seaborn = "^0.13.2"
 
 
 [build-system]
