--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,10 @@ matplotlib = "^3.10.0"
 seaborn = "^0.13.2"
 
 
+[tool.poetry.group.dev.dependencies]
+pandas-stubs = "^2.2.3.250308"
+types-tensorflow = "^2.18.0.20250304"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
